--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "bootstrap-icons": "^1.13.1",
     "bson": "^6.7.0",
     "bson-objectid": "^2.0.4",
     "crypto": "^1.0.1",
