--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "bootstrap-icons": "^1.13.1",
     "bson": "^6.7.0",
     "bson-objectid": "^2.0.4",
+    "cloudinary": "^2.6.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.9.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
-    "mongoose": "^7.8.0",
+    "mongoose": "^7.8.7",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.4",
     "otp-generator": "^4.0.1",
